// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Checkbox should be in a checked state 1`] = `
<View
  accessibilityState={
    {
      "busy": undefined,
      "checked": undefined,
      "disabled": false,
      "expanded": undefined,
      "selected": undefined,
    }
  }
  accessibilityValue={
    {
      "max": undefined,
      "min": undefined,
      "now": undefined,
      "text": undefined,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={true}
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    [
      {
        "alignItems": "center",
        "flexDirection": "row",
        "gap": 8,
      },
      false,
    ]
  }
  testID="checkbox-pressable"
>
  <View
    style={
      {
        "variants": {
          "size": {
            "lg": {
              "height": 28,
              "width": 28,
            },
            "md": {
              "height": 24,
              "width": 24,
            },
            "sm": {
              "height": 20,
              "width": 20,
            },
          },
        },
      }
    }
    testID="checkbox-container"
  >
    <View
      style={
        {
          "alignItems": "center",
          "borderColor": "#667080",
          "borderRadius": 3,
          "borderWidth": 1,
          "height": "100%",
          "justifyContent": "center",
          "variants": {
            "checked": {
              "false": {
                "backgroundColor": "transparent",
                "borderColor": "#667080",
                "opacity": 0.5,
              },
              "true": {
                "backgroundColor": "#667080",
                "borderColor": "#667080",
              },
            },
            "disabled": {
              "true": {
                "backgroundColor": "#EEF1F4",
                "borderColor": "#667080",
                "opacity": 0.5,
              },
            },
          },
          "width": "100%",
        }
      }
    >
      <View
        style={
          {
            "alignItems": "center",
            "justifyContent": "center",
          }
        }
      >
        <Text />
      </View>
    </View>
  </View>
</View>
`;

exports[`Checkbox should match to snapshot 1`] = `
<View
  accessibilityState={
    {
      "busy": undefined,
      "checked": undefined,
      "disabled": false,
      "expanded": undefined,
      "selected": undefined,
    }
  }
  accessibilityValue={
    {
      "max": undefined,
      "min": undefined,
      "now": undefined,
      "text": undefined,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={true}
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    [
      {
        "alignItems": "center",
        "flexDirection": "row",
        "gap": 8,
      },
      false,
    ]
  }
  testID="checkbox-pressable"
>
  <View
    style={
      {
        "variants": {
          "size": {
            "lg": {
              "height": 28,
              "width": 28,
            },
            "md": {
              "height": 24,
              "width": 24,
            },
            "sm": {
              "height": 20,
              "width": 20,
            },
          },
        },
      }
    }
    testID="checkbox-container"
  >
    <View
      style={
        {
          "alignItems": "center",
          "borderColor": "#667080",
          "borderRadius": 3,
          "borderWidth": 1,
          "height": "100%",
          "justifyContent": "center",
          "variants": {
            "checked": {
              "false": {
                "backgroundColor": "transparent",
                "borderColor": "#667080",
                "opacity": 0.5,
              },
              "true": {
                "backgroundColor": "#667080",
                "borderColor": "#667080",
              },
            },
            "disabled": {
              "true": {
                "backgroundColor": "#EEF1F4",
                "borderColor": "#667080",
                "opacity": 0.5,
              },
            },
          },
          "width": "100%",
        }
      }
    />
  </View>
</View>
`;
